vex-945 fix button text wrap

--- a/ui/components/b2b/components/cart-summary/_b2bButtonResp.scss
+++ b/ui/components/b2b/components/cart-summary/_b2bButtonResp.scss
@@ -1,4 +1,5 @@
 .nds-b2b-button {
+    white-space: nowrap;
     @at-root{
         button#{&}{
             white-space: nowrap;
